# jenkins-example

./: .pre-commit-config.yaml  Jenkinsfile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  python-package-conda.yml
src/jenkins_example/: helloworld.py
tests/: test_helloworld.py  test_version.py
