[tool.poetry]
name = "jenkins-example"
version = "0.1.0"
description = ""
authors = ["David Hadley <davehadley@users.noreply.github.com>"]
packages = [ { include = "jenkins_example", from = "src" } ]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
