[tool.poetry]
name = "jenkins-example"
version = "0.1.0"
description = ""
authors = ["David Hadley <davehadley@users.noreply.github.com>"]
packages = [ { include = "jenkins_example", from = "src" } ]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pre-commit = "^2.8.2"
mypy = "^0.790"
flake8 = "^3.8.4"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
